--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Backend for the Grant Application Labs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon index.js",
-    "start":"node index.js"
+    "test": "cross-env DB_ENV=testing jest --watch",
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/Lambda-School-Labs/startup-grant-database-pt5-be#readme",
   "dependencies": {
-    "dotenv": "^8.1.0",
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^24.9.0",
     "knex": "^0.19.5",
     "nodemon": "^1.19.3",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "supertest": "^4.0.2"
   }
 }
