--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon index.js",
-    "start":"node index.js"
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,9 @@
   "dependencies": {
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "knex": "^0.19.5",
+    "knex-cleaner": "^1.3.0",
     "nodemon": "^1.19.3",
     "pg": "^7.12.1"
   }
