--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "jest": "^24.9.0",
     "knex": "^0.19.5",
     "knex-cleaner": "^1.3.0",
-    "nodemon": "^1.19.3",
+    "nodemon": "^1.19.4",
     "pg": "^7.12.1",
-    "supertest": "^4.0.2",
-    "faker": "^4.1.0"
+    "supertest": "^4.0.2"
   }
 }
