--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/Lambda-School-Labs/startup-grant-database-pt5-be#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "firebase-admin": "^8.6.1",
     "jest": "^24.9.0",
     "knex": "^0.19.5",
     "knex-cleaner": "^1.3.0",
