--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "cross-env DB_ENV=testing jest --watch",
     "server": "nodemon index.js",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "engines": {
     "node": "8.10.0"
