--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "knex-cleaner": "^1.3.0",
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
+    "pg-native": "^3.0.0",
     "sqlite3": "^4.1.0",
     "supertest": "^4.0.2"
   }
